kubernetes/user/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user
  labels:
    app: user-service
