kubernetes/user/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: user
spec:
  selector:
    app: user-service
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  type: ClusterIP
